--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
 </head>
 <body>
     <main>
-      <img src="./images/logo.svg" alt="Logo">
-      <div class="calculator">
-
+      <div class="background">
+        <img src="./images/logo.svg" alt="Logo">
+        <div class="calculator">
+          <div class="bill">
+            <label for="bill">Bill</label>
+            <input type="text" name="bill">
+          </div>
+          <div class="tip">
+            <label for="tip">Tip</label>
+            <button>50%</button>
+            <button>10%</button>
+            <button>15%</button>
+            <button>25%</button>
+            <button>50%</button>
+            <button>Custom</button>
+          </div>
+          <div class="people">
+            <label for="peole">Number of people</label>
+            <input type="text" name="people" id="people">
+          </div>
+        </div>
       </div>
       <div class="result">
         <div class="price">
@@ -28,23 +46,11 @@
         </div>
         <button>Reset</button>
       </div>
-      Bill
-
-      Select Tip %
-      5%
-      10%
-      15%
-      25%
-      50%
-      Custom
-    
-      Number of People
-      <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
-      </div>
-    
     </main>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Martin Wallet</a>.
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
